cmake_minimum_required(VERSION 3.8)
project(launch_graph_tutorial)

if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
  set(CMAKE_CXX_STANDARD_REQUIRED ON)
  set(CMAKE_CXX_EXTENSIONS OFF)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic -Werror)
endif()

find_package(ament_cmake_auto REQUIRED)
ament_auto_find_build_dependencies()

ament_auto_add_library(${PROJECT_NAME} SHARED
  src/string_counter.cpp
  src/string_printer.cpp
)
rclcpp_components_register_node(${PROJECT_NAME}
  PLUGIN "launch_graph_tutorial::StringCounter"
  EXECUTABLE string_counter
)
rclcpp_components_register_node(${PROJECT_NAME}
  PLUGIN "launch_graph_tutorial::StringPrinter"
  EXECUTABLE string_printer
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_auto_package(INSTALL_TO_SHARE launch)
