<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>nodeif_generator_cpp</name>
  <version>0.0.0</version>
  <description>The cmake extension to generate node interface.</description>
  <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <buildtool_export_depend>nodeif_cmake</buildtool_export_depend>
  <buildtool_export_depend>python3</buildtool_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>nodeif_generator_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
